--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "!pip install pandas numpy jieba tqdm"
+    "!pip install pandas numpy jieba tqdm jupyter"
    ]
   },
   {
