--- a/GO.ipynb
+++ b/GO.ipynb
@@ -25,6 +25,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 文件导入\n",
+    "    -   读取csv文件\n",
+    "    -   转换csv为列表list"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
@@ -71,6 +82,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 分词函数"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
@@ -90,6 +110,15 @@
      "end_time": "2024-03-28T11:42:02.279424Z",
      "start_time": "2024-03-28T11:42:02.278132Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 测试一下函数"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -116,7 +145,6 @@
     }
    ],
    "source": [
-    "# try your function\n",
     "cut_sentence(sample_string)"
    ],
    "metadata": {
@@ -125,6 +153,15 @@
      "end_time": "2024-03-28T11:42:02.591833Z",
      "start_time": "2024-03-28T11:42:02.280162Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 获取停用词"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -150,19 +187,42 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 过滤停用词的函数"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "def strip_stopwords(words,stopwords):\n",
+    "    \"\"\"\n",
+    "    :param words:  词语列表\n",
+    "    :param stopwords:   停用词列表\n",
+    "    :return:\n",
+    "    \"\"\"\n",
     "    return [word for word in words if word not in stopwords]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.597202Z",
-     "start_time": "2024-03-28T11:42:02.595614Z"
+     "end_time": "2024-03-31T04:48:24.300144Z",
+     "start_time": "2024-03-31T04:48:24.296826Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 测试一下"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -190,6 +250,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 遍历所有数据：分词 -> 过滤停用词"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
@@ -197,6 +266,8 @@
     "\"\"\"\n",
     "Now loop over all sentences to get their words,\n",
     "then save the results to the variable data_records for later call.\n",
+    "\n",
+    "在这个函数里实现遍历所有数据 并分词\n",
     "\"\"\"\n",
     "def process_content(data_records):\n",
     "    \"\"\"\n",
@@ -223,6 +294,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 获取词典"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "outputs": [
@@ -246,6 +326,15 @@
      "end_time": "2024-03-28T11:42:03.425110Z",
      "start_time": "2024-03-28T11:42:03.421430Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 这个函数实现了对词语列表的过滤 并存储"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -281,6 +370,15 @@
      "end_time": "2024-03-28T11:42:03.459613Z",
      "start_time": "2024-03-28T11:42:03.424902Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 这个函数获取词语列表的词频统计"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -321,11 +419,17 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "def get_total_freq_of_sentence(wordList,Freq):\n",
-    "    total = sum([Freq[word] for word in wordList])\n",
-    "    return total\n",
+    "# def get_total_freq_of_sentence(wordList,Freq):\n",
+    "#     total = sum([Freq[word] for word in wordList])\n",
+    "#     return total\n",
     "\n",
     "def convert_words2freqs(wordList,Freq):\n",
+    "    \"\"\"\n",
+    "    这个函数获取了词语列表中 每一个词的词频\n",
+    "    :param wordList:\n",
+    "    :param Freq: 字典 从wordFreq获取\n",
+    "    :return: 列表，对应每个词语的词频\n",
+    "    \"\"\"\n",
     "    return [Freq[w] for w in wordList]"
    ],
    "metadata": {
@@ -366,6 +470,12 @@
    "outputs": [],
    "source": [
     "def get_tf_feat(wordList,vocab):\n",
+    "    \"\"\"\n",
+    "    这个函数 根据词频构建句子的特征\n",
+    "    :param wordList: 单词列表\n",
+    "    :param vocab: 词汇表\n",
+    "    :return: 句子的特征向量\n",
+    "    \"\"\"\n",
     "    tf = np.zeros(vocab_size)\n",
     "    freq = wordFreq(wordList)\n",
     "    for item in freq.items():\n",
@@ -404,6 +514,15 @@
      "end_time": "2024-03-28T11:42:03.468637Z",
      "start_time": "2024-03-28T11:42:03.465842Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    " ## 遍历数据集 构建每个句子的tf特征"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -472,7 +591,9 @@
     "$d_j$: the specific j-th sentence\n",
     "|{j:t_i \\in d_j}|: the number of sentences that contains the word $t_i$\n",
     "\n",
-    "1+: avoid zero division when the word not in any sentences"
+    "1+: avoid zero division when the word not in any sentences\n",
+    "\n",
+    "idf是针对整个数据集做的统计"
    ],
    "metadata": {
     "collapsed": false
@@ -711,6 +832,8 @@
    "source": [
     "def similarity(vec_a,vec_b):\n",
     "    \"\"\"\n",
+    "    Cosine Similarity Calculation\n",
+    "\n",
     "    :param vec_a: np array\n",
     "    :param vec_b: np array\n",
     "    :return: float\n",
@@ -778,6 +901,15 @@
      "end_time": "2024-03-28T11:43:00.689417Z",
      "start_time": "2024-03-28T11:42:34.162850Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "用pytorch加速这个计算过程 可以了解一下爱因斯坦求和公式"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
