--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import copy\n",
@@ -70,7 +70,11 @@
     "from torch.nn import functional as F"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T01:15:54.726579Z",
+     "start_time": "2024-03-31T01:15:53.335884Z"
+    }
    }
   },
   {
@@ -83,24 +87,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.250545Z",
-     "start_time": "2024-03-28T11:42:02.249009Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(datapath,index_col=0)\n",
-    "data_records = data.to_dict('records')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.276960Z",
-     "start_time": "2024-03-28T11:42:02.251492Z"
+     "end_time": "2024-03-31T01:16:02.336113Z",
+     "start_time": "2024-03-31T01:16:02.328514Z"
     }
    }
   },
@@ -109,13 +97,38 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "sample_string = data_records[42]['content']"
+    "data = pd.read_csv(datapath,index_col=0)\n",
+    "data_records = data.to_dict('records')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.277118Z",
-     "start_time": "2024-03-28T11:42:02.274514Z"
+     "end_time": "2024-03-31T01:16:22.899789Z",
+     "start_time": "2024-03-31T01:16:22.870432Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "dict_keys(['id', 'content', 'task-1', 'task-2'])"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_records[0].keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T01:18:59.569871Z",
+     "start_time": "2024-03-31T01:18:59.563307Z"
     }
    }
   },
@@ -124,42 +137,106 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "def cut_sentence(sent):\n",
-    "    \"\"\"\n",
-    "    :param sent: str\n",
-    "    :return:  list\n",
-    "\n",
-    "    Write your own code here\n",
-    "    \"\"\"\n",
-    "    return"
+    "sample_string = data_records[42]['content']"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.279424Z",
-     "start_time": "2024-03-28T11:42:02.278132Z"
+     "end_time": "2024-03-31T01:16:24.161490Z",
+     "start_time": "2024-03-31T01:16:24.154327Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /var/folders/c_/f8ygdlpx3nn0nxjx71cjbdkw0000gn/T/jieba.cache\n",
-      "Loading model cost 0.307 seconds.\n",
-      "Prefix dict has been built successfully.\n"
+      "有些事越想要越得不到，有些梦只能相信，是这样吗\n"
      ]
     },
     {
      "data": {
       "text/plain": "['有些', '事越', '想要', '越', '得不到', '，', '有些', '梦', '只能', '相信', '，', '是', '这样', '吗']"
      },
-     "execution_count": 6,
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sample_string)\n",
+    "list(jieba.cut(sample_string))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T01:17:54.475011Z",
+     "start_time": "2024-03-31T01:17:54.470200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "def cut_sentence(sent): # tokenizer\n",
+    "    \"\"\"\n",
+    "    :param sent: str\n",
+    "    :return:  list\n",
+    "\n",
+    "    Write your own code here\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return jieba.cut(sent)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T01:18:17.271304Z",
+     "start_time": "2024-03-31T01:18:17.267466Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'id': 1,\n 'content': '宿舍要民汉合宿了为毛都大三了还要折腾我',\n 'task-1': 'neg',\n 'task-2': 'angry',\n 'tokens_1': ['宿舍', '要民汉合宿', '了', '为', '毛', '都', '大三', '了', '还要', '折腾', '我']}"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for idx,r in enumerate(data_records):\n",
+    "    data_records[idx]['tokens_1'] = list(cut_sentence(r['content']))\n",
+    "data_records[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-31T01:20:03.316081Z",
+     "start_time": "2024-03-31T01:20:02.799719Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<generator object Tokenizer.cut at 0x16d494880>"
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,8 +248,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T11:42:02.591833Z",
-     "start_time": "2024-03-28T11:42:02.280162Z"
+     "end_time": "2024-03-31T01:18:30.143762Z",
+     "start_time": "2024-03-31T01:18:30.137458Z"
     }
    }
   },
